--- a/Ekonnet/package.json
+++ b/Ekonnet/package.json
@@ -17,9 +17,11 @@
     "axios": "^1.4.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
+    "react-native-svg": "^13.9.0",
     "react-redux": "^8.0.7",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2"
