--- a/Ekonnet/package.json
+++ b/Ekonnet/package.json
@@ -19,8 +19,10 @@
     "react-native": "0.71.8",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^13.9.0",
     "react-redux": "^8.0.7",
     "redux": "^4.2.1",
